--- a/html/boke_html/index.html
+++ b/html/boke_html/index.html
@@ -122,7 +122,7 @@
 						<li><a href=""><i class="fa fa-github"></i></a></li>
 					</ul>
 					<div class="copy-right">
-						<p>Copyright 20xx - More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
+						<p>Copyright 2018 - 成都信息工程大学 · 尹健康</p>
 					</div>
 				</div>
 			</div>
